Added projects sections.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <ul class="wide-list"></ul>
+      <ul class="wide-list" style="display: none"></ul>
       <div class="rows">
         <button id="btnModalClose" class="btn btn--modal"></button>
       </div>
@@ -290,8 +290,40 @@
         </div>
       </section>
       <section class="container flex flex--col">
-        <h1 class="head-text">OUR WORK</h1>
+        <h1 class="head-text">Awesome Portfolio</h1>
         <p class="subtext">some of the work we've done.</p>
+        <div class="shadow"></div>
+        <div class="wide-list project__list">
+          <li class="list__item card project">
+            <img src="assets/images/Projects/70015518_134456617929175_5260901212893406356_n.jpg" alt="project" class="img img--bg">
+            <div class="project__details">
+              <h4>Makhutha High Tea</h4>
+              <p>Event stationary design</p>
+            </div>
+          </li>
+          <li class="list__item card project">
+            <img src="assets/images/Projects/Attemp 7.jpg" alt="project" class="img img--bg">
+            <div class="project__details">
+              <h4>Merit Branding</h4>
+              <p>UX/UI, Development</p>
+            </div>
+          </li>
+          <li class="list__item card project">
+            <img src="assets/images/Projects/69635589_153779402373145_7236531105920009714_n.jpg" alt="project" class="img img--bg">
+            <div class="project__details">
+              <h4>Vumelo</h4>
+              <p>Logo redesign</p>
+            </div>
+          </li>
+          <li class="list__item card project">
+            <img src="assets/images/Projects/MAIN – MC – Final.jpg" alt="project" class="img img--bg">
+            <div class="project__details">
+              <h4>MpiloTech</h4>
+              <p>UX/UI, Development</p>
+            </div>
+          </li>
+          <li class="list__item"></li>
+        </div>
       </section>
       <section class="container" id="team">
         <h1 class="head-text">MEET THE BRAINS</h1>
