Cleaned up team list

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/fonts/fonts.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <script src="https://kit.fontawesome.com/15fdcea667.js"></script>
 
     <link
       rel="stylesheet"
@@ -109,7 +106,7 @@
       <img
         src="assets/images/daniel-korpai-1286320-unsplash.jpg"
         alt="man using computer"
-        class="img img--bg"
+        class="img img--bg hero-img"
       />
       <div class="social-icons"></div>
       <div class="hero">
@@ -133,21 +130,27 @@
         </form>
       </div>
       <div class="social-icons">
-        <a
-          href="https://www.instagram.com/meritbrandinglto/"
-          class="icon fab fa-instagram"
-        >
+          <a
+            href="https://www.instagram.com/meritbrandinglto/"
+            class="icon"
+          >
+          <img src="assets/images/icons/Social/Mask Group 5.svg" alt="">
         </a>
         <a
-          href="https://behance.com/luthospambo"
-          class="icon fab fa-behance"
-        ></a>
-        <a
-          href="https://facebook.com/meritbrandiglto"
-          class="icon fab fa-facebook"
+        href="https://behance.com/luthospambo"
+        class="icon"
         >
-        </a>
-      </div>
+        <img src="assets/images/icons/Social/Mask Group 6.svg" alt="">
+        
+      </a>
+      <a
+      href="https://facebook.com/meritbrandiglto"
+      class="icon"
+      >
+      <img src="assets/images/icons/Social/Mask Group 9.svg" alt="">
+          </a>
+        </div>
+    </div>
     </header>
     <!-- END HEADER -->
 
@@ -335,7 +338,7 @@
               src="https://res.cloudinary.com/tumi/image/upload/v1565547994/Merit/56358381_629128860893350_7512161626173853747_n.jpg"
             />
             <figcaption class="member__details">
-              <h3 class="member__name">Lutho Spambo</h3>
+              <h4>Lutho Spambo</h4>
               <span class="tag">Founder & Graphic Designer</span>
               <p class="member__qoute">
                 “ I'm a graphic designer a reasoner color philosopher. Web
@@ -350,7 +353,7 @@
               src="https://res.cloudinary.com/tumi/image/upload/v1565548056/Merit/18888615_700832066766699_177681530020167680_n.jpg"
             />
             <figcaption class="member__details">
-              <h3 class="member__name">Simo Swssr</h3>
+              <h4>Simo Ngquseka</h4>
               <span class="tag">UX Designer & Developer</span>
               <p class="member__qoute">
                 “I'm a self proclaimed UX design and development ninja, I love
@@ -361,9 +364,46 @@
           </figure>
         </div>
       </section>
-      <section class="container flex--col">
+      <section class="container flex--col" id="map">
         <h1 class="head-text">GET IN TOUCH</h1>
         <p class="subtext">Call us, email us, do you!</p>
+        <div class="not-wide card contact-card">
+          <div class="knife">
+            <img src="assets/images/bro2x.jpg" alt="image" class="img img--bg knife__bg">
+            <h4>Contact</h4>
+            <p>079 234 567 <br> lutho.spambo@meritbranding.co.za</p>
+            <div class="social-icons">
+                <a
+                  href="https://www.instagram.com/meritbrandinglto/"
+                  class="icon"
+                >
+                <img src="assets/images/icons/Social/Mask Group 5.svg" alt="">
+              </a>
+              <a
+              href="https://behance.com/luthospambo"
+              class="icon"
+              >
+              <img src="assets/images/icons/Social/Mask Group 6.svg" alt="">
+              
+            </a>
+            <a
+            href="https://facebook.com/meritbrandiglto"
+            class="icon"
+            >
+            <img src="assets/images/icons/Social/Mask Group 9.svg" alt="">
+                </a>
+              </div>
+          </div>
+          <div class="knife">
+            <img src="assets/images/map2x.jpg" alt="image" class="img img--bg knife__bg">
+            <h4>Visit</h4>
+            <p>Suit 1005 West Tower Building, <br>
+                331 West Street, <br>
+                Durban, KZN
+            </p>
+            <button class="link link--more">view map</button>
+          </div>
+        </div>
       </section>
       <section class="container" id="contact">
         <h1 class="head-text">ENQUIRIES</h1>
@@ -371,7 +411,7 @@
           Send through your questions, and we'll get back to you.
         </p>
 
-        <form class="form">
+        <form class="form not-wide">
           <input
             id="email"
             class="input input--wide form__input"
@@ -387,7 +427,7 @@
             data-is-form="true"
             data-trigger-for="enquiry"
           />
-          <div data-modal-head-for="enquiry" hidden>Before we go</div>
+          <div data-modal-head-for="enquiry" hidden>Before you go</div>
           <div data-modal-text-for="enquiry" hidden>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda
             ipsa iusto exercitationem voluptas porro officia, maiores sed harum
@@ -424,9 +464,9 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="/legal.html/privacy"
+          href="https://swssr.com"
           class="link footer__link"
-          ><strong>Designed By Swssr</strong></a
+          ><strong>design</strong></a
         >
       </div>
       <div class="footer__group">
