--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <figure class="card card--info">
             <img
               class="img card__img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src=https://images.unsplash.com/photo-1444718070663-99afd7176287?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
               alt="info card 1"
             />
             <figcaption class="details">
@@ -191,7 +191,7 @@
           <figure class="card card--info">
             <img
               class="img card__img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
               alt="info card 2"
             />
             <figcaption class="details">
