Projects list is now draggable.

--- a/index.html
+++ b/index.html
@@ -126,31 +126,14 @@
             class="input"
             class="btn btn--primary"
           />
-          <button class="btn btn--primary" type="submit">get in touch</button>
+          <button class="btn btn--primary" type="submit">I want in</button>
         </form>
       </div>
       <div class="social-icons">
-          <a
-            href="https://www.instagram.com/meritbrandinglto/"
-            class="icon"
-          >
-          <img src="assets/images/icons/Social/Mask Group 5.svg" alt="">
-        </a>
-        <a
-        href="https://behance.com/luthospambo"
-        class="icon"
-        >
-        <img src="assets/images/icons/Social/Mask Group 6.svg" alt="">
-        
-      </a>
-      <a
-      href="https://facebook.com/meritbrandiglto"
-      class="icon"
-      >
-      <img src="assets/images/icons/Social/Mask Group 9.svg" alt="">
-          </a>
-        </div>
-    </div>
+        <a href="https://www.instagram.com/meritbrandinglto/"class="icon"><img src="assets/images/icons/Social/instagram.svg" alt=""></a>
+        <a href="https://behance.com/luthospambo" class="icon"><img src="assets/images/icons/Social/behance.svg" alt=""></a>
+        <a href="https://facebook.com/meritbrandiglto" class="icon"><img src="assets/images/icons/Social/facebook.svg" alt=""></a>
+      </div>
     </header>
     <!-- END HEADER -->
 
@@ -373,26 +356,10 @@
             <h4>Contact</h4>
             <p>079 234 567 <br> lutho.spambo@meritbranding.co.za</p>
             <div class="social-icons">
-                <a
-                  href="https://www.instagram.com/meritbrandinglto/"
-                  class="icon"
-                >
-                <img src="assets/images/icons/Social/Mask Group 5.svg" alt="">
-              </a>
-              <a
-              href="https://behance.com/luthospambo"
-              class="icon"
-              >
-              <img src="assets/images/icons/Social/Mask Group 6.svg" alt="">
-              
-            </a>
-            <a
-            href="https://facebook.com/meritbrandiglto"
-            class="icon"
-            >
-            <img src="assets/images/icons/Social/Mask Group 9.svg" alt="">
-                </a>
-              </div>
+              <a href="https://www.instagram.com/meritbrandinglto/"class="icon"><img src="assets/images/icons/Social/instagram.svg" alt=""></a>
+              <a href="https://behance.com/luthospambo" class="icon"><img src="assets/images/icons/Social/behance.svg" alt=""></a>
+              <a href="https://facebook.com/meritbrandiglto" class="icon"><img src="assets/images/icons/Social/facebook.svg" alt=""></a>
+            </div>
           </div>
           <div class="knife">
             <img src="assets/images/map2x.jpg" alt="image" class="img img--bg knife__bg">
