Can submit enquiry using hero form

--- a/index.html
+++ b/index.html
@@ -464,5 +464,6 @@
     </footer>
     <script src="assets/lib/dialog-polyfill.js"></script>
     <script defer src="assets/js/index.js"></script>
+    <script defer src="assets/js/enquiry.js"></script>
   </body>
 </html>
