Added new checkable service packs on modal.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 
     <!-- END NAV -->
     <dialog class="modal">
-      <h1 class="head-text modal__head">Test</h1>
+      <div>
+        <h1 class="head-text modal__head">Test</h1>
+        <p class="subtext">text</p>
+      </div>
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
