Fixed minor spacing issues

--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
               <h4 class="service__name" data-modal-head-for="branding">
                 Branding
               </h4>
-              <div data-modal-text-for="branding">
+              <p data-modal-text-for="branding">
                 Leave an impression, let us help you or business stand out from
                 the pack.
-              </div>
+              </p>
               <a
                 href="#0"
                 class="link link--more service--more"
@@ -242,10 +242,10 @@
               <h4 class="service__name" data-modal-head-for="stationary">
                 Development
               </h4>
-              <div data-modal-text-for="appDev">
+              <p data-modal-text-for="appDev">
                 Got an idea, or do you want to take advantage of the booming
                 online market, we're hire.
-              </div>
+              </p>
               <a
                 href="#0"
                 class="link link--more service--more"
@@ -264,10 +264,10 @@
               <h4 class="service__name" data-modal-head-for="appDev">
                 Stationary
               </h4>
-              <div data-modal-text-for="stationary">
+              <p data-modal-text-for="stationary">
                 Event posters, custom office stationary you name it, we got your
                 back.
-              </div>
+              </p>
               <a
                 href="#0"
                 class="link link--more service--more
