Added loading indicator for http requests

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </nav>
 
     <!-- END NAV -->
+    <div class="loader"></div>
     <dialog class="modal">
       <div>
         <h1 class="head-text modal__head">Test</h1>
