--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       type="text/css"
       href="assets/lib/dialog-polyfill.css"
     />
-
     <title>Merit Branding</title>
   </head>
 
@@ -107,6 +106,7 @@
       </div>
       <button id="btnModalClose" class="btn btn--modal"></button>
     </dialog>
+    <div class="backdrop"></div>
     <!-- START HEADER -->
     <header id="header" class="container">
       <img
