Added cart logic, fixed minor mobile UI issues. 👍

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <!-- END NAV -->
     <div class="loader"></div>
+    <div class="cart"></div>
     <dialog class="modal">
       <div>
         <h1 class="head-text modal__head">Test</h1>
