Can compose email using cart

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- END NAV -->
     <div class="loader"></div>
-    <div class="cart"></div>
+    <a href="#contact" class="cart-counter"></a>
     <dialog class="modal">
       <div>
         <h1 class="head-text modal__head">Test</h1>
