fixed enqForm mobile padding

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             placeholder="Type on!"
             id="enquiryBody"
             class="input modal__input input--area"
+            cols="40"
           ></textarea>
         </fieldset>
 
