Fixed logo crop

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- END JUMPUP -->
     <!-- START NAV -->
     <nav class="nav--top">
-      <img src="assets/images/icons/Logo.svg" class="logo" alt="logo" />
+      <img src="assets\images\icons\SVG\Logov2.svg" class="logo" alt="logo" />
       <input id="menu" type="checkbox" class="menu--chk" />
       <label for="menu" class="lb-menu"></label>
       <div class="nav__links">
